# C-Primer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  License.txt  README.md  TutorialConfig.h.in
MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.h  mysqrt.cxx
ch01/: 1.20.cpp  Sales_item.h  main.cpp
chapter01/: main.cpp
cmake_tutorial/: tutorial.cpp
docs/: CLionTemplate-CMakeLists.txt
tour_cpp/: main.cpp
